Bug 389135 - Plasma panel shows "username - Dolphin" instead "Home - Dolphin" when I open download destination folder
Summary: Plasma panel shows "username - Dolphin" instead "Home - Dolphin" when I open ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.12.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-01-17 23:09 UTC by Patrick Silva
Modified: 2019-09-15 18:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.11.80
Sentry Crash Report:


Attachments
screenshot (19.84 KB, image/png)
2018-01-17 23:09 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-01-17 23:09:56 UTC
Created attachment 109957 [details]
screenshot

Plasma 5.12 beta on Arch Linux here.

When I open dolphin clicking on its icon in apps menu plasma panel shows "Home - Dolphin".
But when I open dolphin using "open folder" feature from Firefox download manager I see "username - Dolphin" in plasma panel.

download a file using Firefox and save it to your home folder
when the download is finished, click on download manager icon aside address bar, click the folder icon to open the destination folder.
See my screenshot.
Comment 1 Kai Uwe Broulik 2018-01-18 08:30:15 UTC
There's apparently a difference between when opening /home/foo and /home/foo/ (note the trailing slash). In the latter case the special logic for using the places panel name doesn't work and it shows the folder name instead.
Comment 2 Patrick Silva 2019-08-20 12:34:10 UTC
Also reproducible with the following steps:

1. Search for a file in KRunner
2. Click the "Open containing folder" button

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.16.80
KDE Frameworks Version: 5.62.0
Qt Version: 5.12.3
Comment 3 Elvis Angelaccio 2019-09-15 18:40:13 UTC
Git commit 681d8bb6cd13005236c2f389a09e428204b4dd76 by Elvis Angelaccio, on behalf of Nazar Kalinowski.
Committed on 15/09/2019 at 18:38.
Pushed by elvisangelaccio into branch 'master'.

Fix wrong window titles

Summary:
FIXED-IN: 19.11.80

Currently dolphin shows a folder's name instead of a "place" name if the current path has trailing slash and place's name doesn't, or vice versa.
This patch fixes this behavior, so that dolphin always shows a "place" name.

The QUrl::FullyEncoded string conversion is required because that's how
the places model stores the places URLs in the XML bookmarks file.

Test Plan:
Test configuration: https://imgur.com/a/U4zBp8c
Before (wrong window titles are in red): https://imgur.com/a/dB4xRwo
After (all window titles are correct): https://imgur.com/a/W7virBn

Reviewers: #dolphin, elvisangelaccio

Subscribers: elvisangelaccio, ngraham, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D23706

M  +1    -1    src/dolphinviewcontainer.cpp

https://commits.kde.org/dolphin/681d8bb6cd13005236c2f389a09e428204b4dd76